@@ -1,3 +1,8 @@
+2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* fetch-root.c (fshelp_fetch_root): Don't use MAKE_SEND in Hurd
+	RPC.
+
 2000-03-13  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* start-translator-long.c (service_fsys_startup): If mach_msg fails
